--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
+    "classnames": "^2.2.6",
     "react": "^17.0.1",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.1",
+    "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-touch-carousel": "^0.9.4",
+    "react-touch-drag-slider": "^2.1.2",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.1",
+    "swiper": "^5.3.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
